# scutclient

./: .gitignore  CMakeLists.txt  DrcomScutClient.service  DrcomScutClient.timer
cmake/: cmake_uninstall.cmake.in
openwrt/files/: scutclient.init
src/: auth.cpp  auth.h  config.h  drcom.cpp  drcom.h  info.h  main.cpp  parsers.h  tracelog.cpp
wireless/: logger.h  main.cpp  url.h  wireless.h
